--- a/packages/label/package.json
+++ b/packages/label/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "@daxter-army/button",
+  "name": "@daxter-army/label",
   "version": "0.0.0",
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
   "author": "daxter-army <mehulsaini456@gmail.com>",
   "license": "ISC",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "src": "lib/Button.tsx",
-  "types": "dist/index.d.ts",
+  "main": "lib/label.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
   },
   "files": [
-    "dist",
     "lib"
   ],
   "publishConfig": {
     "access": "public"
   },
-  "scripts": {
-    "test": "node ./__tests__/@daxter-army/button.test.js"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/daxter-army/component-library.git"
   },
-  "dependencies": {
-    "@daxter-army/label": "^0.0.0"
-  }
+  "scripts": {
+    "test": "node ./__tests__/@daxter-army/label.test.js"
+  },
+  "bugs": {
+    "url": "https://github.com/daxter-army/component-library/issues"
+  },
+  "homepage": "https://github.com/daxter-army/component-library#readme"
 }
