--- a/packages/arsenal/package.json
+++ b/packages/arsenal/package.json
@@ -8,6 +8,7 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "src": "lib/Arsenal.tsx",
+  "types": "dist/index.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -22,5 +23,8 @@
   },
   "scripts": {
     "test": "node ./__tests__/@daxter-army/arsenal.test.js"
+  },
+  "dependencies": {
+    "@daxter-army/button": "^0.0.0"
   }
 }
