--- a/packages/label/package.json
+++ b/packages/label/package.json
@@ -5,12 +5,16 @@
   "keywords": [],
   "author": "daxter-army <mehulsaini456@gmail.com>",
   "license": "ISC",
-  "main": "lib/label.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "src": "lib/Label.tsx",
+  "types": "dist/index.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
   },
   "files": [
+    "dist",
     "lib"
   ],
   "publishConfig": {
