Compiled react-beautiful-dropdown 0.0.1

--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -14,8 +14,7 @@
     "test": "__tests__"
   },
   "files": [
-    "dist",
-    "lib"
+    "dist"
   ],
   "publishConfig": {
     "access": "public"
