refactored builder.js, tsconfig.json and some packages' package.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
 		"rootDir": ".",
 		"moduleResolution": "node",
 		"allowSyntheticDefaultImports": true,
-		// "emitDeclarationOnly": true,
+		"emitDeclarationOnly": true,
 	},
 	"exclude": [
 		"node_modules",
