--- a/packages/arsenal/package.json
+++ b/packages/arsenal/package.json
@@ -8,7 +8,7 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "src": "lib/Arsenal.tsx",
-  "types": "dist/index.d.ts",
+  "types": "dist/Arsenal.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -17,7 +17,6 @@
     "dist",
     "lib"
   ],
-  "types": "dist/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
