--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -8,13 +8,14 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "src": "lib/Button.tsx",
-  "types": "dist/index.d.ts",
+  "types": "dist/Button.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
   },
   "files": [
-    "dist"
+    "dist",
+    "lib"
   ],
   "publishConfig": {
     "access": "public"
