--- a/packages/label/package.json
+++ b/packages/label/package.json
@@ -8,7 +8,7 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "src": "lib/Label.tsx",
-  "types": "dist/index.d.ts",
+  "types": "dist/Label.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
