--- a/packages/react-beautiful-dropdown/package.json
+++ b/packages/react-beautiful-dropdown/package.json
@@ -14,7 +14,8 @@
     "test": "__tests__"
   },
   "files": [
-    "dist"
+    "dist",
+    "lib"
   ],
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@daxter-army"
